--- a/src/components/Header.css
+++ b/src/components/Header.css
@@ -194,7 +194,7 @@
 }
 
 #sidebar-search{
-  padding: 5px 15px;
+  padding: 10px 15px;
   border-radius: 10px;
   outline: none;
   border: none;
@@ -223,7 +223,7 @@
 
 }
 
-@media(max-width:768px){
+@media(max-width:800px){
   .header{
     margin: 0 ;
     width: 100%;
@@ -252,9 +252,42 @@
       left: 70%;
     }
 
-   
+    #sidebar-search{
+      width: 60%;
+    }
 
     
+  }
+
+  @media (max-width:512px){
+    .header{
+      margin: 0 ;
+      width: 100%;
+  }
+  
+      .navbar,.social-icons{
+        display: none;
+      }
+    
+      .open-slide{
+        display: block;
+      }
+  
+      .menu{
+        grid-template-columns: 50% 50%;
+        
+      }
+  
+      .menu .logo{
+        display: flex;
+        justify-content: center;
+      }
+  
+      .menu .open-slide button{
+        position: absolute;
+        left: 70%;
+      }
+  
   }
   
   @media(min-width:769px){
