--- a/src/components/Carrier.css
+++ b/src/components/Carrier.css
@@ -4,6 +4,7 @@
     flex-direction: column;
     justify-content: space-between;
     align-items: center;
+    margin-top: 2rem;
 }
 
 .carrier-top{
@@ -11,7 +12,7 @@
     margin: auto;
     display: flex;
     justify-content: space-between;
-    align-items: flex-start;
+    align-items: center;
 }
 
 .carrier-top a{
@@ -71,6 +72,10 @@
         width: 100%;
         margin: 0.5rem 0;
     }
+
+    .info{
+        width: 70%;
+    }
 }
 
 @media(max-width:524px){
@@ -86,4 +91,9 @@
         width: 100%;
         margin: 0.5rem 0;
     }
+
+    .info{
+        width: 60%;
+    }
+    
 }
