--- a/src/components/Games.css
+++ b/src/components/Games.css
@@ -1,3 +1,9 @@
+:root{
+    --primary: #0B0C10;
+    --secondary: #fad326;
+
+}
+
 .container-games{
     width: 100%;
     display: flex;
@@ -33,7 +39,7 @@
 .slider-games{
     max-width: 900px;
     display: flex;
-    align-items: center;
+    
     justify-content: space-between;
     
 }
@@ -42,7 +48,7 @@
     width: 100%;
     height: 500px;
     overflow: hidden;
-    border: 2px solid white;
+    border: 2px solid var(--secondary);
 }
 
 .images{
@@ -64,6 +70,10 @@
     
 }
 
+#arrow-right, #arrow-left{
+    margin: auto;
+}
+
 .games-social{
     
     width: 900px;
@@ -72,8 +82,104 @@
     display: flex;
     align-items: center;
     justify-content: space-between;
-    padding: 0.5rem 2.5rem 0.5 2;
+    padding: 0.5rem 2rem;
     
+}
+
+.games-social .social-icons{
+    width: 80%;
+    display: flex;
+    justify-content: flex-end;
+    
+
+}
+
+@media (max-width:800px){
+    .container-games{
+        margin-top: 50vh;
+        width: 600px;
+        height: 800px;
+        position: relative;
+    }
+
+    .games-social{
+        width: 90%;
+        padding: 0.5rem 0;
+        margin: auto;
+    }
+
+    .slider-games{
+
+        display: flex;
+        justify-content: center;
+    }
+
+    .games-social .social-icons{
+        width: 50%;
+        display: flex;
+        justify-content: center;
+    }
+
+    .games-social .social-icons ul{
+        width: 100%;
+        display: flex;
+        align-items: center;
+        justify-content: space-around;
+    }
+}
+
+@media (max-width:512px){
+    .container-games{
+        margin-top: 150vh;
+        width: 300px;
+        height: 500px;
+        position: relative;
+    }
+
+    .slider-games{
+        
+        display: flex;
+        justify-content: center;
+        
+    }
+
+    .games-social{
+        width: 90%;
+        padding:0 0 0 1rem;
+        
+    }
+
+    .games-social .social-icons{
+        display: flex;
+        flex-direction: column;
+        align-items: flex-end;
+        justify-content: flex-end;
+        padding: 1rem 1rem 0 0;
+    }
+
+    .games-social .social-icons ul{
+        width: 20%;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+    }
+
+    .games-social .social-icons ul #visit-website{
+        display: none;
+    }
+
+    .info{
+        font-size: 12px;
+    }
+
+    .info span{
+        font-size: 10px;
+    }
+
+    .more{
+        margin-left: 2rem;
+    }
 }
 
 
