--- a/src/App.css
+++ b/src/App.css
@@ -1,8 +1,8 @@
 @import url('https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Lato:wght@300;400;700;900&family=Poppins:wght@200;300;400;500&display=swap');
 :root{
-    --primary: #0B0C10;
+    --primary: #F2FFE9;
     --secondary: #fad326;
-
+    --dark:#0B0C10;
 }
 
 *{
@@ -15,11 +15,17 @@
 
 body{
     font-family: 'Poppins', sans-serif;
-    background-color: var(--primary);
+    /* background-color: var(--primary); */
     overflow-x: hidden;
     max-width: 2000px;
     margin-left: auto;
     margin-right: auto;
+    
+}
+
+body a{
+    text-decoration: none;
+    
 }
 
 .App{
@@ -27,6 +33,7 @@ body{
     flex-direction: column;
     align-items: center;
     justify-content: center;
+    background: var(--primary);
     
 }
 
