--- a/src/components/Games.css
+++ b/src/components/Games.css
@@ -1,6 +1,7 @@
 :root{
-    --primary: #0B0C10;
+    --primary: #F2FFE9;
     --secondary: #fad326;
+    --dark:#0B0C10;
 
 }
 
@@ -25,8 +26,10 @@
     color: white;
 }
 
+
+
 .games-top .more a{
-    color: white;
+    color: var(--dark);
 }
 
 .sliderCon{
@@ -83,29 +86,68 @@
     align-items: center;
     justify-content: space-between;
     padding: 0.5rem 2rem;
+    background: rgba(0, 0, 0, 0.2);
     
 }
 
 .games-social .social-icons{
-    width: 80%;
+    width: 30%;
     display: flex;
+    align-items: center;
     justify-content: flex-end;
     
+}
 
+.games-social .social-icons ul{
+    width: 100%;
+    margin: auto;
+    display: flex;
+    align-items: center;
+    justify-content: space-around;
+}
+
+.games-social .social-icons ul li a{
+    color: var(--primary);
+}
+
+.games-social .social-icons #facebook:hover a i{
+    color: #3b5998;
+}
+
+.games-social .social-icons #twitter:hover a {
+    color: #1da1f2;
+    
+}
+
+.games-social .social-icons #linkedin:hover a i{
+    color: #0a66c2;
+}
+
+.games-social .social-icons #instagram:hover a {
+  background: #c32aa3;
 }
 
 @media (max-width:800px){
     .container-games{
         margin-top: 50vh;
-        width: 600px;
-        height: 800px;
+        width: 100%;
+       
         position: relative;
     }
 
     .games-social{
-        width: 90%;
-        padding: 0.5rem 0;
+       
+        display: flex;
+        align-items: center;
         margin: auto;
+        width: 100%;
+        height: 50px;
+        background: rgba(0, 0, 0, 0.2);
+        padding:0 0 0 1rem;
+    }
+
+    .imagesDiv{
+        height: auto;
     }
 
     .slider-games{
@@ -114,17 +156,21 @@
         justify-content: center;
     }
 
+    
     .games-social .social-icons{
         width: 50%;
         display: flex;
         justify-content: center;
+        align-items: center;
     }
 
     .games-social .social-icons ul{
         width: 100%;
+        height: 50px;
         display: flex;
         align-items: center;
         justify-content: space-around;
+        margin: auto;
     }
 }
 
@@ -132,7 +178,7 @@
     .container-games{
          margin-top: 150vh; 
         
-        width: 300px;
+        width: 100%;
         height: 500px;
         position: relative;
     }
@@ -144,27 +190,48 @@
         
     }
 
+    
+
+    .imagesDiv{
+        width: 100%;
+        height: 200px;
+    }
+
+ 
+
     .games-social{
-        width: 90%;
+        width: 100%;
         padding:0 0 0 1rem;
-        
+        height: 40px;
+        background: rgba(0, 0, 0, 0.2);
+    }
+
+    .games-social .logo{
+        width: 15px;
+        height: 25px;
     }
 
     .games-social .social-icons{
+        width: 50%;
+        height: 40px;
+        
         display: flex;
-        flex-direction: column;
+        flex-direction: row;
         align-items: flex-end;
         justify-content: flex-end;
-        padding: 1rem 1rem 0 0;
+          padding: 0 1rem 0 0;  
     }
 
     .games-social .social-icons ul{
-        width: 20%;
+        width: 100%;
         display: flex;
-        flex-direction: column;
+        
+        flex-direction: row;
         align-items: center;
-        justify-content: center;
+        justify-content: space-around;
     }
+
+    
 
     .games-social .social-icons ul #visit-website{
         display: none;
