--- a/src/components/News.css
+++ b/src/components/News.css
@@ -1,7 +1,8 @@
 @import url('https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Lato:wght@300;400;700;900&family=Poppins:wght@200;300;400;500&display=swap');
 :root{
-    --primary: #0B0C10;
+    --primary: #F2FFE9;
     --secondary: #fad326;
+    --dark:#0B0C10;
 
 }
 
@@ -10,7 +11,7 @@
     width: 70%;
     display: flex;
     flex-direction: column;
-    color: white;
+    color: var(--dark);
     
 }
 
@@ -18,15 +19,23 @@
     width: 90%;
     display: flex;
     align-items: center;
+    color: var(--dark);
+    
+}
+
+.info{
+    color: var(--dark);
+    font-weight: bold;
 }
 
 
-.news-top a{
-    color: white;
+.more a{
+    color: var(--dark);
 }
 
 .info span{
-    color: rgb(160, 160, 160);
+    color: rgb(120, 120, 120);
+    font-weight: normal;
 }
 
 .news-grid{
@@ -44,23 +53,28 @@
     position: relative;
     cursor: pointer;
     max-width: 500px;
-    
+    font-weight: 500;
+    transition: transform .3s;
 }
 
-.news-item:hover .news-paragraph{
-    background: white;
-    color: black;
+/* .news-item:hover{
+    transform: scale(1.05);
+} */
+
+ /* .news-item:hover a{
+     background: var(--dark); 
+    color: var(--primary);
     
-}
+}  */
 
 .news-item:hover a{
     color: #ff7300;
-}
+} 
 
 .news-paragraph{
     
     padding: 1rem 1.5rem 5rem 1.5rem;
-    border: solid white;
+    border: solid var(--dark);
     border-width: 0 1px 7px 1px;
     transition: 0.3s ease-in-out;
 }
